--- a/package.json
+++ b/package.json
@@ -3,9 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "google-map-react": "^1.1.4",
+    "google-maps-react": "^2.0.2",
+    "moment": "^2.24.0",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-big-calendar": "^0.21.0",
+    "react-bootstrap": "^1.0.0-beta.8",
+    "react-date-range": "^1.0.0-beta",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-google-places-autocomplete": "^1.3.1",
+    "react-places-autocomplete": "^7.2.1",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "3.0.1",
+    "superagent": "^5.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
